Fixed summit edit page

--- a/thousands/templates/summit_edit.html
+++ b/thousands/templates/summit_edit.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Редактировать вершину{% endblock %}
 {% block content %}
+<h1>Редактировать вершину</h1>
 {% if form.errors %}
 <div id="form-errors" class="alert alert-danger">
     <ul id="form-error-list">
