--- a/thousands/templates/user.html
+++ b/thousands/templates/user.html
@@ -9,16 +9,16 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-<h1>{{ user.name }}</h1>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
-<div class="alert alert-success" role="alert">
+<div class="alert alert-success flash-message" role="alert">
     {% for message in messages %}
       {{ message }}
     {% endfor %}
 </div>
   {% endif %}
 {% endwith %}
+<h1>{{ user.name }}</h1>
 <div class="row">
     <div class="col-md-3 text-right">
         {% if user.image_id %}
