Improved about page

--- a/thousands/templates/about.html
+++ b/thousands/templates/about.html
@@ -6,13 +6,42 @@
 <h1>О проекте</h1>
 
 <h2>Что это?</h2>
-<p>Данный проект является попыткой создать интернет-версию неформального туристического клуба восходителей на тысячники Южного Урала "Исилган". Каждый участник клуба ставит себе целью совершить восхождени на все вершины Южного Урала высотой более тысячи метров над уровнем моря. Историю клуба "Исилган" и причины его создания можно узнать <a href="http://www.isilgan.ru/2013/06/blog-post_5161.html">у его создателей</a></p>
 
-<p>Исходные коды сайта доступны на <a href="https://github.com/binrush/thousands">GitHub</a>.</p>
+<p>
+У сайта &laquo;Тысячники Южного Урала&raquo; две основные функции.
+Во-первых это удобный каталог всех вершин Южного Урала выше тысячи метров.
+Во-вторых это возможность каждому вести учет пройденных вершин.
+Идея проекта позаимствована у неформального туристического клуба &laquo;Исилган&raquo;, который был создан в далеком 1982 году.
+Участники этого клуба ставили себе целью совершить восхождения на все вершины Южного Урала высотой более тысячи метров над уровнем моря.
+Историю клуба "Исилган" и причины его создания можно узнать <a href="http://www.isilgan.ru/2013/06/blog-post_5161.html">у его создателей</a>.</p>
 
 <h2>Контактная информация</h2>
-<p>По вопросам работы сайта с создателями проекта можно связаться по электронной почте: <a href="mailto:rush.ru@gmail.com">rush.ru@gmail.com</a>.</p>
 
+<p>По любым вопросам, касающимся работы сайта, можно писать на <a href="mailto:rush.ru@gmail.com">rush.ru@gmail.com</a>.</p>
+
+<p>Новости проекта будут публиковаться в <a href="http://vk.com/southural_1000">группе Вконтакте</a></p>
+
+<p>Работа над проектом ведется на <a href="https://github.com/binrush/thousands">GitHub</a>.</p>
+
+<h2>Планы на будущее</h2>
+<p>В следующих версиях планируется реализовать:</p>
+<ul>
+    <li>возможность скачивания координат всех вершин в формате, удобном для загрузки в GPS</li>
+    <li>систему виртуальных &laquo;наград&raquo;. Например за 10, 50, 100 пройденных вершин, за наибольшее количество вершин, пройденных за год и т.п.</li>
+    <li>отдельные страницы с описанием хребтов</li>
+    <li>фотографии вершин</li>
+    <li>загрузка данных о восхождениях в виде GPS-трека</li>
+</ul>
+
+<h2>Благодарности</h2>
+<p><a href="http://vk.com/id13527586">Борису Прохорову</a> &mdash; за идею и предоставленный каталог вершин.</p>
+<p><a href="https://github.com/kagel/">Дмитрию Хватову</a> &mdash; за помощь в разработке</p>
+<p><a href="http://vk.com/dexterity">Антону Горбунову</a> &mdash; за помощь с дизайном</p>
+
+<h2>Интересные ссылки</h2>
+<p><a href="http://www.southural.ru/">По тропам Южного Урала</a> &mdash; масса полезной информации для путешествующих по Южному Уралу</p>
+<p><a href="http://vk.com/public85298612">Шале Исилган</a></p>
+<p><a href="http://vk.com/gruppazdoroviyaclub">Группа здоровья</a></p>
 <h2>Информация об авторских правах</h2>
 <p>backpacking icon by Claire Jones from the Noun Project</a>
 {% endblock %}
