Fixed text on about page

--- a/thousands/templates/about.html
+++ b/thousands/templates/about.html
@@ -13,7 +13,7 @@
 Во-вторых это возможность каждому вести учет пройденных вершин.
 Идея проекта позаимствована у неформального туристического клуба &laquo;Исилган&raquo;, который был создан в далеком 1982 году.
 Участники этого клуба ставили себе целью совершить восхождения на все вершины Южного Урала высотой более тысячи метров над уровнем моря.
-Историю клуба "Исилган" и причины его создания можно узнать <a href="http://www.isilgan.ru/2013/06/blog-post_5161.html">у его создателей</a>.</p>
+Историю клуба &laquo;Исилган&raquo; и причины его создания можно узнать <a href="http://www.isilgan.ru/2013/06/blog-post_5161.html">у его создателей</a>.</p>
 
 <h2>Контактная информация</h2>
 
