--- a/thousands/templates/about.html
+++ b/thousands/templates/about.html
@@ -26,6 +26,7 @@
 <h2>Планы на будущее</h2>
 <p>В следующих версиях планируется реализовать:</p>
 <ul>
+    <li>Интеграция с соц. сетями (кнопки "рассказать друзьям")</li>
     <li>возможность скачивания координат всех вершин в формате, удобном для загрузки в GPS</li>
     <li>систему виртуальных &laquo;наград&raquo;. Например за 10, 50, 100 пройденных вершин, за наибольшее количество вершин, пройденных за год и т.п.</li>
     <li>отдельные страницы с описанием хребтов</li>
@@ -38,10 +39,12 @@
 <p><a href="https://github.com/kagel/">Дмитрию Хватову</a> &mdash; за помощь в разработке</p>
 <p><a href="http://vk.com/dexterity">Антону Горбунову</a> &mdash; за помощь с дизайном</p>
 
+{#
 <h2>Интересные ссылки</h2>
 <p><a href="http://www.southural.ru/">По тропам Южного Урала</a> &mdash; масса полезной информации для путешествующих по Южному Уралу</p>
 <p><a href="http://vk.com/public85298612">Шале Исилган</a></p>
 <p><a href="http://vk.com/gruppazdoroviyaclub">Группа здоровья</a></p>
+#}
 <h2>Информация об авторских правах</h2>
 <p>backpacking icon by Claire Jones from the Noun Project</a>
 {% endblock %}
