--- a/thousands/templates/map.html
+++ b/thousands/templates/map.html
@@ -2,6 +2,17 @@
 {% block title %}Тысячники Южного Урала - Карта{% endblock %}
 {% block description %}Вершины Южного Урала выше тысячи метров на карте{% endblock %}
 {% block content %}
+{% with messages = get_flashed_messages(category_filter=['error']) %}
+  {% if messages %}
+<div class="alert alert-danger flash-message-map text-right" role="alert">
+    {% for message in messages %}
+      {{ message }}
+      <a href="{{ request.url }}"><span class="glyphicon glyphicon-remove alert-link" aria-hidden="true"></span></a>
+    {% endfor %}
+</div>
+  {% endif %}
+{% endwith %}
+
 <div id="map"></div>
 <script>
   {% if hl_summit != None %}
