--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -2,7 +2,7 @@
 {% block title %}{{ summit.format_name() }} {% endblock %}
 {% block description %}Вершина {{ summit.format_name() }} хребта {{ summit.ridge }} &mdash; расшифровка названия, высота, координаты{% endblock %}
 {% block content %}
-{% with messages = get_flashed_messages() %}
+{% with messages = get_flashed_messages(category_filter=['message']) %}
   {% if messages %}
 <div class="alert alert-success flash-message" role="alert">
     {% for message in messages %}
