--- a/thousands/templates/user.html
+++ b/thousands/templates/user.html
@@ -9,7 +9,7 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-{% with messages = get_flashed_messages() %}
+{% with messages = get_flashed_messages(category_filter=['message']) %}
   {% if messages %}
 <div class="alert alert-success flash-message" role="alert">
     {% for message in messages %}
