Fixed error 500 template

--- a/thousands/templates/500.html
+++ b/thousands/templates/500.html
@@ -1,5 +1,5 @@
 {% extends "errorpage.html" %}
-{% block title %}Страница не найдена{% endblock %}
+{% block title %}Ошибка сервера{% endblock %}
 {% block content %}
 <h1>500 Ошибка сервера</h1>
 <p><big>На сервере произошла ошибка. Мы уже работаем над её исправлением. Попробуйте повторить попытку позже.</big></p>
