Changed about page

--- a/thousands/templates/about.html
+++ b/thousands/templates/about.html
@@ -39,12 +39,11 @@
 <p><a href="https://github.com/kagel/">Дмитрию Хватову</a> &mdash; за помощь в разработке</p>
 <p><a href="http://vk.com/dexterity">Антону Горбунову</a> &mdash; за помощь с дизайном</p>
 
-{#
 <h2>Интересные ссылки</h2>
 <p><a href="http://www.southural.ru/">По тропам Южного Урала</a> &mdash; масса полезной информации для путешествующих по Южному Уралу</p>
-<p><a href="http://vk.com/public85298612">Шале Исилган</a></p>
-<p><a href="http://vk.com/gruppazdoroviyaclub">Группа здоровья</a></p>
-#}
+<p><a href="http://vk.com/gruppazdoroviyaclub">Походы выходного дня с Группой Здоровья</a> &mdash; отличный способ познакомиться с Южным Уралом.</p>
+<p><a href="http://vk.com/public85298612">Активный отдых в Шале Исилган</a></p>
+
 <h2>Информация об авторских правах</h2>
 <p>backpacking icon by Claire Jones from the Noun Project</a>
 {% endblock %}
