--- a/thousands/templates/layout.html
+++ b/thousands/templates/layout.html
@@ -28,9 +28,12 @@
 
   <link rel="stylesheet" href="/static/style.css" />
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+  <link rel="stylesheet" href="/static/leaflet.draw.css" />
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <script src="/static/leaflet-hash.js"></script>
   <script src="/static/Leaflet.MakiMarkers.js"></script>
+  <script src="/static/leaflet.draw.js"></script>
+  <script src="/static/leaflet.measurecontrol.js"></script>
   <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
   <script src="/static/Google.js"></script>
   <script src="/static/su1000.js"></script>
