Initial work on user avatar upload

--- a/thousands/templates/layout.html
+++ b/thousands/templates/layout.html
@@ -41,6 +41,9 @@
   <link rel="stylesheet" href="/static/bootstrap-datepicker3.min.css" />
   <script src="/static/bootstrap-datepicker.min.js"></script>
   <script src="/static/bootstrap-datepicker.ru.min.js"></script>
+
+  <link rel="stylesheet" href="/static/cropper.min.css" />
+  <script src="/static/cropper.min.js"></script>
 </head>
 
 <body>
