--- a/thousands/static/style.css
+++ b/thousands/static/style.css
@@ -83,21 +83,11 @@ a.anchor {
     background-color: #e7e7e7;
 }
 
-/*.avatar-view {
+.avatar-view {
   display: block;
-  margin: 15% auto 5%;
-  height: 220px;
-  width: 220px;
-  border: 3px solid #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0,0,0,.15);
   cursor: pointer;
   overflow: hidden;
 }
-
-.avatar-view img {
-  width: 100%;
-}*/
 
 .avatar-body {
   padding-right: 15px;
