Implemented avatar change

--- a/thousands/templates/avatar-upload.html
+++ b/thousands/templates/avatar-upload.html
@@ -235,6 +235,7 @@
         this.$img = $('<img src="' + this.url + '">');
         this.$avatarWrapper.empty().html(this.$img);
         this.$img.cropper({
+          viewMode: 1,
           aspectRatio: 1,
           preview: this.$avatarPreview.selector,
           strict: false,
