--- a/thousands/templates/layout.html
+++ b/thousands/templates/layout.html
@@ -44,6 +44,10 @@
 
   <link rel="stylesheet" href="/static/cropper.min.css" />
   <script src="/static/cropper.min.js"></script>
+
+  <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+  <link rel="stylesheet" href="/static/bootstrap-image-gallery.min.css">
+  <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
 </head>
 
 <body>
