--- a/thousands/templates/summit_image_edit.html
+++ b/thousands/templates/summit_image_edit.html
@@ -30,7 +30,7 @@
     <label class="col-md-3 control-label">Фотография</label>
     <div class="col-md-6">
       <p class="form-control-static">
-      <img src="{{ url_for('image_get', image_id=image) }}">
+      <img src="{{ url_for('image_get', image_id=image) }}" class="img-responsive">
       </p>
     </div>
   </div>
