Adde dummy summit image

--- a/thousands/templates/about.html
+++ b/thousands/templates/about.html
@@ -45,5 +45,6 @@
 <p><a href="http://vk.com/public85298612">Активный отдых в Шале Исилган</a></p>
 
 <h2>Информация об авторских правах</h2>
-<p>backpacking icon by Claire Jones from the Noun Project</a>
+<p>backpacking icon by Claire Jones from the Noun Project</p>
+<p>snowy mountains by Camila Bertoco from the Noun Project</p>
 {% endblock %}
