--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -31,6 +31,9 @@
             {% endif %}
         </a>
         {% endfor %}
+        {% else %}
+            <img src="/static/mnt_dummy.png" class="img-responsive center-block summit-image-main">
+            <p>Есть фотография этой вершины? Можете <a href="">поделиться ей</a> с нашим проектом.</p>
         {% endif %}
     </div>
     <div class="col-md-8">
