--- a/thousands/templates/summit_images.html
+++ b/thousands/templates/summit_images.html
@@ -34,6 +34,15 @@
     {{ form.comment(class_='form-control') }}
     </div>
   </div>
+  <div class="form-group">
+    <div class="col-md-offset-3 col-md-6">
+      <div class="checkbox">
+        <label>
+          {{ form.main }} Основная фотография?
+        </label>
+      </div>
+    </div>
+  </div>
    <div class="form-group">
     <div class="col-md-offset-3 col-md-6">
       <button type="submit" class="btn btn-primary">Загрузить</button>
