--- a/thousands/templates/summit_edit.html
+++ b/thousands/templates/summit_edit.html
@@ -42,9 +42,9 @@
     </div>
   </div>
   <div class="form-group">
-    {{ form.rid.label(class_='col-md-3 control-label') }}
+    {{ form.ridge_id.label(class_='col-md-3 control-label') }}
     <div class="col-md-6">
-    {{ form.rid(class_='form-control') }}
+    {{ form.ridge_id(class_='form-control') }}
     </div>
   </div>
   <div class="form-group">
